Java 14 instanceof pattern matching code example (#1)
Java 14 instanceof pattern matching code example